apps/adsb-feeder/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: adsb-feeder
  labels:
    pod-security.kubernetes.io/enforce: privileged
