apps/adsb-feeder/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adsb-feeder
  namespace: adsb-feeder
  labels:
    app.kubernetes.io/component: main
    app.kubernetes.io/instance: adsb-feeder
    app.kubernetes.io/name: adsb-feeder
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/component: main
      app.kubernetes.io/instance: adsb-feeder
      app.kubernetes.io/name: adsb-feeder
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: main
        app.kubernetes.io/instance: adsb-feeder
        app.kubernetes.io/name: adsb-feeder
    spec:
      automountServiceAccountToken: true
      nodeSelector:
        adsb.feature.node.kubernetes.io/rtlsdr: "true"
      containers:
        - name: adsb-feeder
          image: ghcr.io/sdr-enthusiasts/docker-adsb-ultrafeeder:latest@sha256:0daf88591dd1abc2d8f99302d3cdb7032cee48439dbc22ed6b71499d02f3bb35
          securityContext:
            privileged: true
          volumeMounts:
            - name: globe-history
              mountPath: /var/globe_history
            - name: graphs1090
              mountPath: /var/lib/collectd
            - name: osm-tiles
              mountPath: /usr/local/share/osm_tiles_offline
      volumes:
      - name: globe-history
        persistentVolumeClaim:
          claimName: adsb-globe-history-pvc-replicated
      - name: graphs1090
        persistentVolumeClaim:
          claimName: adsb-graphs1090-pvc-replicated
      - name: osm-tiles
        persistentVolumeClaim:
          claimName: adsb-osm-tiles-pvc-replicated
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fr24-feeder
  namespace: adsb-feeder
  labels:
    app.kubernetes.io/component: secondary
    app.kubernetes.io/instance: fr24-feeder
    app.kubernetes.io/name: fr24-feeder
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/component: secondary
      app.kubernetes.io/instance: fr24-feeder
      app.kubernetes.io/name: fr24-feeder
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: secondary
        app.kubernetes.io/instance: fr24-feeder
        app.kubernetes.io/name: fr24-feeder
    spec:
      containers:
        - name: fr24-feeder
          image: ghcr.io/sdr-enthusiasts/docker-flightradar24:latest@sha256:0cadcbe96e9be6ca5be5cbf084c16577b710c2459b27a762fe29152e755d50ab
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flightaware-feeder
  namespace: flightaware-feeder
  labels:
    app.kubernetes.io/component: secondary
    app.kubernetes.io/instance: flightaware-feeder
    app.kubernetes.io/name: flightaware-feeder
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/component: secondary
      app.kubernetes.io/instance: flightaware-feeder
      app.kubernetes.io/name: flightaware-feeder
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: secondary
        app.kubernetes.io/instance: flightaware-feeder
        app.kubernetes.io/name: flightaware-feeder
    spec:
      containers:
        - name: flightaware-feeder
          image: ghcr.io/sdr-enthusiasts/docker-piaware:latest@sha256:6f55685d38bb10361252582abb52c8e5991d9b7826bab5fd5ae65a69837b14fd
