apps/adsb-feeder/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: adsb-feeder
    app.kubernetes.io/name: adsb-feeder
    app.kubernetes.io/service: adsb-feeder
  name: adsb-feeder
  namespace: adsb-feeder
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  - name: re-api
    port: 30152
    protocol: TCP
    targetPort: 30152
  - name: beast
    port: 30005
    protocol: TCP
    targetPort: 30005
  selector:
    app.kubernetes.io/component: main
    app.kubernetes.io/instance: adsb-feeder
    app.kubernetes.io/name: adsb-feeder
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: flightaware-feeder
    app.kubernetes.io/name: flightaware-feeder
    app.kubernetes.io/service: flightaware-feeder
  name: flightaware-feeder
  namespace: adsb-feeder
spec:
  ports:
  - name: beast
    port: 30105
    protocol: TCP
    targetPort: 30105
  selector:
    app.kubernetes.io/component: secondary
    app.kubernetes.io/instance: flightaware-feeder
    app.kubernetes.io/name: flightaware-feeder
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    tailscale.com/tailnet-ip: 100.88.132.39
  name: external-adsb
spec:
  externalName: ts-external-adsb-vkx25.tailscale-operator.svc.cluster.local
  type: ExternalName
